Fix left padding on small devices

--- a/grignote.css
+++ b/grignote.css
@@ -31,7 +31,7 @@
   font-family: gricanard;
   float:left;
   height:50px;
-  padding:5px 5px;
+  padding:5px 15px 5px 15px;
   font-size:23pt;
   line-height:20px
   -webkit-text-stroke: 1px #ead7c8;
@@ -48,8 +48,7 @@
   color: #291a0f;
   font-family: gricanard;
   font-size: 33pt;
-    line-height:20px
-
+  line-height:20px
   -webkit-text-stroke: 1px #ead7c8;
    text-shadow:
       2px 2px 0 #ead7c8,
